--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1880,6 +1880,10 @@ input[type=file]::file-selector-button:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(63, 131, 248, var(--tw-bg-opacity));
 }
+.bg-blue-100 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(225, 239, 254, var(--tw-bg-opacity));
+}
 .bg-gray-900 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
@@ -1983,6 +1987,18 @@ input[type=file]::file-selector-button:hover {
 .py-10 {
 	padding-top: 2.5rem;
 	padding-bottom: 2.5rem;
+}
+.px-2\.5 {
+	padding-left: 0.625rem;
+	padding-right: 0.625rem;
+}
+.py-0\.5 {
+	padding-top: 0.125rem;
+	padding-bottom: 0.125rem;
+}
+.py-0 {
+	padding-top: 0px;
+	padding-bottom: 0px;
 }
 .pt-6 {
 	padding-top: 1.5rem;
@@ -2165,6 +2181,10 @@ input[type=file]::file-selector-button:hover {
 .text-blue-500 {
 	--tw-text-opacity: 1;
 	color: rgba(63, 131, 248, var(--tw-text-opacity));
+}
+.text-blue-800 {
+	--tw-text-opacity: 1;
+	color: rgba(30, 66, 159, var(--tw-text-opacity));
 }
 .text-gray-200 {
 	--tw-text-opacity: 1;
