--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1872,13 +1872,25 @@ input[type=file]::file-selector-button:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(28, 100, 242, var(--tw-bg-opacity));
 }
-.bg-green-500 {
+.bg-green-100 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(14, 159, 110, var(--tw-bg-opacity));
+	background-color: rgba(222, 247, 236, var(--tw-bg-opacity));
 }
-.bg-blue-500 {
+.bg-yellow-100 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(63, 131, 248, var(--tw-bg-opacity));
+	background-color: rgba(253, 246, 178, var(--tw-bg-opacity));
+}
+.bg-indigo-100 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(229, 237, 255, var(--tw-bg-opacity));
+}
+.bg-purple-100 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(237, 235, 254, var(--tw-bg-opacity));
+}
+.bg-pink-100 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(252, 232, 243, var(--tw-bg-opacity));
 }
 .bg-blue-100 {
 	--tw-bg-opacity: 1;
@@ -1903,6 +1915,14 @@ input[type=file]::file-selector-button:hover {
 .bg-gray-300 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
+}
+.bg-green-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(14, 159, 110, var(--tw-bg-opacity));
+}
+.bg-blue-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(63, 131, 248, var(--tw-bg-opacity));
 }
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
@@ -2181,6 +2201,30 @@ input[type=file]::file-selector-button:hover {
 .text-blue-500 {
 	--tw-text-opacity: 1;
 	color: rgba(63, 131, 248, var(--tw-text-opacity));
+}
+.text-red-800 {
+	--tw-text-opacity: 1;
+	color: rgba(155, 28, 28, var(--tw-text-opacity));
+}
+.text-green-800 {
+	--tw-text-opacity: 1;
+	color: rgba(3, 84, 63, var(--tw-text-opacity));
+}
+.text-yellow-800 {
+	--tw-text-opacity: 1;
+	color: rgba(114, 59, 19, var(--tw-text-opacity));
+}
+.text-indigo-800 {
+	--tw-text-opacity: 1;
+	color: rgba(66, 56, 157, var(--tw-text-opacity));
+}
+.text-purple-800 {
+	--tw-text-opacity: 1;
+	color: rgba(85, 33, 181, var(--tw-text-opacity));
+}
+.text-pink-800 {
+	--tw-text-opacity: 1;
+	color: rgba(153, 21, 75, var(--tw-text-opacity));
 }
 .text-blue-800 {
 	--tw-text-opacity: 1;
